// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/http/gitea handles pagination with empty response 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-3",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-3?page=2",
  },
]
`;

exports[`util/http/gitea supports pagination on data property 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-2?page=2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-2?page=3",
  },
]
`;

exports[`util/http/gitea supports responses without pagination when enabled 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-1",
  },
]
`;

exports[`util/http/gitea supports root-level pagination 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-1",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-1?page=2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitea.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitea.renovatebot.com/api/v1/pagination-example-1?page=3",
  },
]
`;
